Fix minor text alignment bugs

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -42,6 +42,7 @@ button {
 .page-title {
   text-shadow: 3px 3px 1px rgb(255, 114, 114);
   font-size: 1.5rem;
+  text-align: center;
 }
 
 .main-content {
@@ -53,7 +54,7 @@ button {
 }
 
 .board {
-  min-width: 320px;
+  min-width: 240px;
   align-self: center;
   border: 3px solid rgb(0, 0, 0);
 }
@@ -68,8 +69,8 @@ button {
 .cell {
   border: 1px solid black;
   background-color: rgb(220, 220, 220);
-  width: 2rem;
-  height: 2rem;
+  width: 1.5rem;
+  height: 1.5rem;
   padding: 0;
   display: flex;
   font-family: "Press Start 2P", system-ui;
@@ -107,10 +108,13 @@ button {
 
 .modal-message {
   color: rgb(255, 255, 255);
-  font-size: 2rem;
+  font-size: 1.5rem;
+  text-align: center;
 }
 
 .modal-button {
+  color: rgb(0, 0, 0);
+
   &:hover {
     color: #fff;
   }
